# fcs-project

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  fcbc.md  fcs-conversion.md  fcs-render.md  fcs.md  loop.md  skills-lock.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  review_finding.md  task_or_spec.md
.github/workflows/: full-gate.yml
.scratch/fcs5-rc/: map.md
.trellis/: .template-hashes.json  config.yaml
conformance/: README.md  manifest.toml
conformance/conversion/: diagnostic-categories.toml  mapping-rules.toml  mapping-vectors.toml  selection-vectors.toml
conformance/fcbc/: embedded-resource.toml  manifest.toml  minimal-runtime.hex  minimal-runtime.toml  mutations.toml  nonempty-execution-mutations.toml  nonempty-execution-vector.toml  nonempty-execution.toml
conformance/fcs5/: manifest.toml
conformance/render/: invalid-missing-viewport.fcs  manifest.toml  solid-rect-4x4.fcs  solid-rect-4x4.semantic.json
crates/fcs-cli/: Cargo.toml
crates/fcs-cli/src/: main.rs
crates/fcs-cli/tests/: cli.rs
crates/fcs-conversion/: Cargo.toml
crates/fcs-conversion/src/: capability.rs  comparison.rs  exact.rs  export.rs  fixture_lane.rs  lib.rs  pec.rs  pec_canonical.rs  pgr.rs  pgr_canonical.rs  profile_selection.rs  repair.rs  rpe.rs  rpe_canonical.rs
crates/fcs-converter/: Cargo.toml
crates/fcs-converter/examples/: gen_pgr_rt.rs
crates/fcs-converter/src/: coord.rs  ir.rs  lib.rs  time.rs  to_fcs.rs
crates/fcs-converter/src/from_fcs/: autofill.rs  controls.rs  coord.rs  easing_map.rs  evaluator.rs  flattener.rs  mod.rs  note_util.rs  pec_writer.rs  pgr_writer.rs  rpe_writer.rs  time.rs  warnings.rs
crates/fcs-converter/src/pec/: mod.rs
crates/fcs-converter/src/pgr/: mod.rs  types.rs
crates/fcs-converter/src/rpe/: mod.rs  types.rs
crates/fcs-converter/tests/: copyright_tests.rs  cross_format_tests.rs  fcs_tests.rs  pec_tests.rs  pgr_tests.rs  roundtrip.rs  rpe_tests.rs
crates/fcs-converter/tests/common/: mod.rs  paths.rs  roundtrip.rs
crates/fcs-core/: Cargo.toml
crates/fcs-core/src/: lib.rs
crates/fcs-core/src/ast/: expr.rs  line.rs  meta.rs  mod.rs  note.rs  shader.rs  template.rs  timeline.rs
crates/fcs-core/src/bytecode/: constant_pool.rs  header.rs  mod.rs  property.rs  sections.rs  string_table.rs
crates/fcs-core/src/compiler/: context.rs  emit.rs  expr.rs  mod.rs  prototype.rs  speed.rs  timeline.rs
crates/fcs-core/src/error/: mod.rs
crates/fcs-core/src/parser/: block.rs  expr.rs  literal.rs  mod.rs
crates/fcs-core/src/units/: color.rs  mod.rs
crates/fcs-core/src/v5/: mod.rs  schema.rs  validation.rs
crates/fcs-core/src/v5/ast/: definitions.rs  entity.rs  mod.rs  time.rs  types.rs
crates/fcs-core/src/v5/elaborator/: cycle.rs  entities.rs  eval.rs  mod.rs  scope.rs
crates/fcs-core/src/v5/parser/: definitions.rs  document.rs  entities.rs  expression.rs  header.rs  lexer.rs  mod.rs  tempo.rs
crates/fcs-core/src/vm/: easing.rs  math.rs  mod.rs  opcode.rs  stack.rs
crates/fcs-core/tests/: fcs5_frontend.rs  fcs5_phase2.rs  workspace_structure.rs
crates/fcs-fcbc/: Cargo.toml
crates/fcs-fcbc/src/: codec.rs  container.rs  error.rs  evaluator.rs  lib.rs  loader.rs  mutations.rs  writer.rs
crates/fcs-model/: Cargo.toml
crates/fcs-render/: Cargo.toml
crates/fcs-render/src/: assets.rs  lib.rs  loader.rs  semantic.rs  writer.rs
crates/fcs-runtime/: Cargo.toml
crates/fcs-runtime/src/: descriptor.rs  easing.rs  expression.rs  lib.rs  scroll.rs  track.rs  transform.rs
crates/fcs-runtime/tests/: reference_numeric.rs  runtime_properties.rs
crates/fcs-source/: Cargo.toml
crates/fcs-source/src/: canonical.rs  custom.rs  diagnostic.rs  expression.rs  lib.rs  line.rs  note.rs  resource.rs  schema.rs  scroll.rs  track.rs  validation.rs  version.rs
crates/fcs-source/src/ast/: color.rs  definitions.rs  document.rs  entity.rs  extension.rs  metadata.rs  mod.rs  time.rs  track.rs  types.rs
crates/fcs-source/src/elaborator/: cycle.rs  entities.rs  eval.rs  generator.rs  mod.rs  resolve.rs  scope.rs  tracks.rs
crates/fcs-source/src/parser/: definitions.rs  document.rs  entities.rs  expression.rs  extension.rs  header.rs  input.rs  lexer.rs  metadata.rs  mod.rs  tempo.rs  token.rs  tracks.rs
crates/fcs-source/tests/: canonical_chart.rs  canonical_chart_snapshot.rs  canonical_compilation.rs  color_graph.rs  compile_time.rs  conformance_manifest.rs  custom_value_limits.rs  diagnostic.rs  expression.rs  fcbc_execution_abi.rs  fcbc_render_section.rs  frontend.rs  line_graph.rs  metadata_graph.rs  note_graph.rs  profile_validation.rs  resource_bundle.rs  robustness.rs  scroll.rs  source_ast.rs  sync_shared_vectors.rs  track_graph.rs  workspace_structure.rs
crates/fcs-source/tests/support/: canonical_snapshot.rs  fcbc_reference_evaluator.rs  fcbc_reference_loader.rs  fcbc_reference_writer.rs  fcbc_render_reference_loader.rs
docs/: CONTEXT.md  README.md  specification-governance.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/community/: README.md  pec.md  pgr.md  rpe.md
docs/conformance/: README.md  fcs5-fuzz-lane.md  fcs5-implementation-matrix.md  fcs5-runtime-properties.md  fcs5-source-production-coverage.md
docs/decisions/: 0001-single-runtime-clock.md  0002-judgment-time-and-scroll-coordinate.md  0003-compile-time-structure-only.md  0004-independent-version-domains.md  0005-error-bounded-numerics.md  0006-unversioned-source-cutover.md  0007-versioned-conversion-semantic-profiles.md  0008-fcs-authoring-fcbc-distribution-boundary.md  0009-player-local-baking-shared-runtime.md  0010-stage-scoped-implementation-baselines.md  0011-github-issue-pr-workflow.md  0012-canonical-textual-id-encoding.md  0012-public-runner-private-gates.md  0013-public-project-full-gate-ci.md
docs/loops/: loop.md  review-loop.md
docs/plans/: fcs5-dependency-baseline.md  fcs5-roadmap.md  (+14 more)
examples/: complex_sample.fcs  sample.fcs
fuzz/: Cargo.toml
fuzz/corpus/: README.md
fuzz/fuzz_targets/: document_bytes.rs  document_utf8.rs  expression.rs
scripts/: fcs5-fuzz-smoke.sh
(+206 files in other folders)
