[workspace]
resolver = "2"
members = ["crates/fcs-model", "crates/fcs-runtime", "crates/fcs-source"]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
chumsky = { version = "=0.11.2", default-features = false, features = ["std", "stacker"] }
clap = { version = "4.6.1", features = ["derive"] }
crc = "3.4.0"
image = { version = "0.25.10", default-features = false }
nalgebra = { version = "0.35.0", default-features = false, features = ["std"] }
proptest = { version = "1.11.0", default-features = false, features = ["std", "handle-panics"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = { version = "0.11.0", default-features = false }
toml = { version = "1.1.3", default-features = false, features = ["parse", "serde"] }
zip = { version = "8.6.0", default-features = false }
