[workspace]
resolver = "2"
members = [
    "crates/fcs-model",
    "crates/fcs-runtime",
    "crates/fcs-source",
    "crates/fcs-conversion",
    "crates/fcs-fcbc",
    "crates/fcs-cli",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
astro-float = { version = "=0.9.5", default-features = false, features = ["std"] }
bitflags = "=2.13.1"
chumsky = { version = "=0.11.2", default-features = false, features = ["std", "stacker"] }
clap = { version = "=4.6.1", features = ["derive"] }
crc = "=3.4.0"
image = { version = "=0.25.10", default-features = false }
nalgebra = { version = "=0.35.0", default-features = false, features = ["std"] }
num-bigint = { version = "=0.4.8", default-features = false, features = ["std"] }
num-rational = { version = "=0.4.2", default-features = false, features = ["num-bigint", "std"] }
num-traits = { version = "=0.2.19", default-features = false, features = ["std"] }
num_enum = { version = "=0.7.6", default-features = false }
proptest = { version = "=1.11.0", default-features = false, features = ["std", "handle-panics"] }
ryu = "=1.0.23"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = { version = "=0.11.0", default-features = false }
tempfile = "=3.27.0"
thiserror = "=2.0.19"
toml = { version = "=1.1.3", default-features = false, features = ["parse", "serde"] }
ttf-parser = { version = "=0.25.1", default-features = false }
zip = { version = "=8.6.0", default-features = false }
