[package]
name = "fcs-conversion"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FCS external-format import and conversion boundaries"

[dependencies]
fcs-model = { path = "../fcs-model" }
fcs-source = { path = "../fcs-source" }
num-bigint.workspace = true
num-rational.workspace = true
num-traits.workspace = true
ryu.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
sha2.workspace = true
toml.workspace = true

[dev-dependencies]
