[package]
name = "fcs-converter"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Chart format converter: PGR/RPE/PEC → FCS"

[dependencies]
fcs-core = { path = "../fcs-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
