[package]
name = "fcs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FCS parser, compiler, and bytecode library"

[dependencies]
nom = "7"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
bytemuck = { version = "1", features = ["derive"] }
ordered-float = "4"
