[package]
name = "fcs-fcbc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FCBC 2 container framing, codec primitives, and product loader surface"

[dependencies]
crc.workspace = true
sha2.workspace = true

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
