[package]
name = "fcs-fcbc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FCBC 2 container framing, codec primitives, and product loader surface"

[dependencies]
crc.workspace = true
fcs-model = { path = "../fcs-model" }
sha2.workspace = true

[dev-dependencies]
fcs-source = { path = "../fcs-source" }
serde = { workspace = true, features = ["derive"] }
tempfile.workspace = true
toml.workspace = true
