[package]
name = "fcs-render"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FCS Render Profile product codec and reference raster surface"

[dependencies]
fcs-fcbc = { path = "../fcs-fcbc" }
image = { workspace = true, features = ["png", "webp"] }
sha2.workspace = true
ttf-parser.workspace = true

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
