[package]
name = "fcs-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FCS exact runtime descriptor and evaluation foundations"

[dependencies]
fcs-model = { path = "../fcs-model" }
nalgebra.workspace = true

[dev-dependencies]
astro-float.workspace = true
serde.workspace = true
toml.workspace = true
