[package]
name = "fcs-source"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FCS source parser and compile-time elaborator"

[dependencies]
chumsky.workspace = true

[dev-dependencies]
crc.workspace = true
proptest.workspace = true
serde.workspace = true
sha2.workspace = true
toml.workspace = true
