[package]
name = "fcs-source"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FCS source parser and compile-time elaborator"

[dependencies]
chumsky.workspace = true
fcs-model = { path = "../fcs-model" }

[dev-dependencies]
crc.workspace = true
fcs-runtime = { path = "../fcs-runtime" }
image = { workspace = true, features = ["png", "webp"] }
proptest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
toml.workspace = true
